# VBAlidator

./: .commitlintrc.json  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MISSING_FEATURES.md  README.md  TODO.md  VBA_Model_Exporter.bas  mkdocs.yml  pyproject.toml  requirements.txt  vba_model.json  vba_report.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  false_positive.yml  feature.yml
.github/workflows/: build.yml  ci.yml  dependabot-automerge.yml  docker.yml  docs.yml  nightly-coverage.yml  pr-quality.yml  release.yml  roundtrip.yml  security.yml
demo/: BadClass.cls  BadModule.bas
docs/: Architecture.md  Configuration.md  Extending.md  Usage.md  ai-integration.md  changelog.md  ci-cd.md  github-actions.md  host-models-comparison.md  index.md  quickstart.md  roadmap.md  uat.md
docs/rules/: VBA001.md  VBA002.md  VBA003.md  VBA004.md  VBA005.md  VBA006.md  VBA007.md  VBA008.md  VBA009.md  VBA010.md  VBA101.md  VBA102.md  VBA103.md  VBA104.md  VBA105.md  VBA106.md  VBA201.md  VBA210.md  VBA211.md  VBA221.md  VBA222.md  VBA223.md  VBA224.md  VBA230.md  VBA231.md  VBA240.md  VBA250.md  VBA260.md  VBA300.md  VBA310.md  VBA320.md  VBA330.md  VBA340.md  VBA341.md  VBA350.md  VBA360.md  VBA361.md  VBA_LEX001.md  VBA_LEX002.md  VBA_RT000.md  (+3 more)
examples/: README.md  vba_references.example.json
src/: __init__.py  analyzer.py  api.py  config.py  lexer.py  main.py  parser.py  preprocessor.py  reporting.py  roundtrip.py  rules.py  scoring.py  std_model.json
src/models/: access.json  excel.json  mscomctl.json  msforms.json  outlook.json  scripting.json  shell_application.json  vbscript_regexp.json  visio.json  word.json  wscript_shell.json
tests/: conftest.py  test_awesome_vba_regression.py  test_compile_error_samples.py  test_iter4_wave4.py  test_lexer_errors.py  test_phase1_control_flow.py  test_phase24_to_29.py  test_phase26_member_chain.py  test_phase2_validation.py  test_phase3_validation.py  test_phase4_5_6.py  test_phase4_api.py  test_single_line_blocks.py  test_single_line_if.py  test_valid_samples.py
tests/awesome_vba/JSONBag/: Form1.frm  Form1.frx  JsonBag.cls  Project1.vbp  Project1.vbw  sample.json
tests/awesome_vba/stdVBA-master/src/: stdAcc.cls  stdArray.cls  stdCOM.cls  stdCallback.cls  stdClipboard.cls  stdEnumerator.cls  stdError.cls  stdFiber.cls  stdHTTPAuthenticators.bas  stdImage.cls  stdLambda.cls  stdPerformance.cls  stdProcess.cls  stdQuadTree.cls  stdRefArray.cls  stdReg.cls  stdRegex.cls  stdRibbon.cls  stdSentry.cls  stdTimer.cls  stdUIElement.cls  stdWebSocket.cls  stdWindow.cls
tests/const_test/: ConstTest.bas
tests/demo/: BadForm.frm  ExistingModule.bas  MissingMemberTest.bas  RegressionForm.frm
tests/new_features/: createobject.bas  false_positive_controlflow.bas  false_positive_unreachable.bas  false_positives.bas  full_repro.bas  signatures.bas  unreachable.bas  user_repro.bas
tests/samples/compile_errors/argument_mismatch/: arg_count_mismatch.bas
tests/samples/compile_errors/byref_mismatch/: basic.bas  builtin.bas  objects.bas
tests/samples/compile_errors/const_expression/: calls_function.bas  references_variable.bas
tests/samples/compile_errors/date_literal/: invalid_date.bas
tests/samples/compile_errors/declare_ptrsafe/: missing_ptrsafe.bas
tests/samples/compile_errors/duplicate_declaration/: duplicate_const.bas  duplicate_dim.bas
tests/samples/compile_errors/end_terminator/: end_function_closes_sub.bas  end_sub_closes_function.bas
tests/samples/compile_errors/enum_uniqueness/: duplicate_member.bas
tests/samples/compile_errors/erase_target/: non_array.bas
tests/samples/compile_errors/fixed_length_string/: in_procedure.bas
tests/samples/compile_errors/jump_target/: on_goto_undefined.bas  undefined_goto.bas  undefined_on_error.bas  undefined_resume.bas
tests/samples/compile_errors/member_access/: array_of_udt_member_bogus.bas  deep_udt_chain_bogus_leaf.bas  function_returning_udt_chain.bas  invalid_dot_reference_no_with.bas  member_not_found.bas
tests/samples/compile_errors/operator_type/: string_arith.bas
tests/samples/compile_errors/property_arity/: wrong_let_arity.cls
tests/samples/compile_errors/raise_event/: unknown_event.cls
tests/samples/compile_errors/redim_target/: non_array.bas  redim_member_scalar.bas  undefined.bas
tests/samples/compile_errors/set_vs_let/: missing_set.bas  set_on_scalar.bas
tests/samples/compile_errors/statement_placement/: declare_inside_sub.bas  executable_at_module_level.bas  type_inside_sub.bas
tests/samples/compile_errors/syntax_errors/: missing_then.bas  unexpected_token.bas
tests/samples/compile_errors/type_mismatch/: expected_array_or_procedure.bas
tests/samples/compile_errors/undefined_identifier/: unknown_variable.bas
tests/samples/compile_errors/unreachable_code/: after_exit.bas  (+1 more)
tests/samples/valid_code/: byref_variant.bas  control_flow_phase1.bas  deep_member_chain.bas  missing_proc_level.bas  on_goto_jump_table.bas  phase24_to_29.bas  phase2_jumps_set.bas  phase2_property_arity.cls  phase3_basics.bas  redim_member_array.bas  valid_sample.bas  vba_builtins_callbyname.bas
tests/vba_code/: ConstError.bas  ConstTest.bas  LineContinuation.bas  Module1.bas  Module2.bas  UserForm1.frm  WithTest.bas  repro_missing_module_level.bas  repro_missing_proc_level.bas
tools/: VBA_Model_Exporter.bas  build_mscomctl_model.py  build_msforms_model.py  generate_model.py  generate_rule_docs.py  generate_typelib_json.py
vbalidator/: __init__.py
