[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vbalidator"
version = "0.1.0"
description = "VBA Static Analysis Tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "colorama",
    "comtypes"
]

[project.scripts]
vbalidator = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json"]
