[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vbalidator"
version = "0.1.1"
description = "VBA Static Analysis Tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "colorama",
    "comtypes; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
]

[project.scripts]
vbalidator = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json", "models/*.json"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
# Phase-0 lint surface: critical correctness only. Style rules (I, B, UP)
# will be enabled in follow-up PRs as the legacy code is migrated.
select = ["F", "E9"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # tests adjust sys.path before imports
