[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vbalidator"
version = "1.1.2"
description = "Premium VBA static analyser & compile-safety prechecker for AI-generated VBA"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "twobeass" },
]
keywords = ["vba", "static-analysis", "linter", "office", "excel", "macro", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Compilers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "colorama",
    "comtypes; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/twobeass/VBAlidator"
Documentation = "https://twobeass.github.io/VBAlidator/"
Issues = "https://github.com/twobeass/VBAlidator/issues"
Changelog = "https://github.com/twobeass/VBAlidator/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
roundtrip = [
    "pywin32>=300; sys_platform == 'win32'",
]

[project.scripts]
vbalidator = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
# `vbalidator` is the user-facing import name (compatibility shim); the
# implementation still lives under `src/` until a future PR moves the
# source tree. Keep both included so `from src import …` (used by
# tests + tooling) AND `from vbalidator import …` (PyPI users) work.
include = ["src*", "vbalidator*"]

[tool.setuptools.package-data]
"*" = ["*.json", "models/*.json"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
# Phase-0 lint surface: critical correctness only. Style rules (I, B, UP)
# will be enabled in follow-up PRs as the legacy code is migrated.
select = ["F", "E9"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # tests adjust sys.path before imports

# python-semantic-release driven by Conventional Commits.
# Bumps version in pyproject.toml, generates CHANGELOG.md, tags and
# creates the GitHub release. PyPI publish is handled by a follow-up
# job using OIDC trusted publishing.
[tool.semantic_release]
version_variables = ["src/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_vcs_release = true
build_command = "python -m pip install build && python -m build"
commit_message = "chore(release): v{version}\n\n[skip ci]"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "test", "ci", "build", "chore", "style"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.changelog]
template_dir = ".semantic_release_templates"
exclude_commit_patterns = [
    "^chore\\(release\\)",
    "^chore\\(deps\\)",
]
